--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "gita",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://rossoskull.me/gita",
   "dependencies": {
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && rm -rf docs && mv build docs",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
