--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "http://rossoskull.me/gita",
   "dependencies": {
     "@material-ui/core": "^3.2.0",
+    "@material-ui/icons": "^3.0.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
